--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2704,9 +2704,9 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 5px;
 		border: 0;
-		background: #f0dfd7b7;
+		background: linear-gradient(to top right, #3d251e 20%,#4d342a79 50%, rgb(161, 150, 150));
 		box-shadow: inset 0 0 0 1px #765341;
-		color: #533830b5 !important;
+		color: white !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.9em;
@@ -2793,7 +2793,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #c0b0a8;
+				background-color: #cc7722;
 			}
 
 			input[type="submit"].primary:active,
@@ -2801,7 +2801,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #484848;
+				background-color: linear-gradient(to top right, #3d251e 20%,#4d342a79 50%, rgb(161, 150, 150));
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
