--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -358,7 +358,7 @@ input, select, textarea {
 		}
 
 		.row > .col-4 {
-			width: 100%;
+			width: 33.33333%;
 		}
 
 		.row > .off-4 {
@@ -2363,8 +2363,16 @@ input, select, textarea {
 	}
 
 		.image img {
+			
 			border-radius: 4px;
 			display: block;
+			
+		}
+		.fits {
+			margin-top: 5rem;
+			border-radius: 14px 28px;
+			display: block;
+			
 		}
 
 		.image.left {
